# vid-mix

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  app.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: fetch_ffmpeg_wasm.ps1  fetch_ffmpeg_wasm.sh
static/css/: video-lab.css
static/js/: api.js  videoEditor.js
static/js/videoEditor/: assets.js  crop.js  export.js  filters.js  playback.js  projects.js  state.js  timeline.js  utils.js
templates/: index.html
tests/: test_app.py
