[project]
name = "standalone-video-editor"
version = "0.0.0"
description = "Local Flask + SQLite video editor"
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
target-version = "py310"
src = ["."]
line-length = 100
extend-exclude = ["venv", ".venv", "static/libs", "node_modules"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "B008",  # Flask route defaults use function calls by design
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
